@startuml DataSpace Metamodel with Notes

' Class definitions
abstract class PackageableElement {
  +name: String
}

class DataSpace {
  +title: String[0..1]
  +description: String[0..1]
}

abstract class AccessPointProvider {
  +name: String[1]
  +title: String[0..1]
  +description: String[0..1]
}

class MappingAccessProvider extends AccessPointProvider {
  +mapping: Mapping[1]
  +defaultRuntime: PackageableRuntime[1]
  +testData: EmbeddedData[0..1]
}

class StoreAccessProvider extends AccessPointProvider {
  +store: Store[1]
  +defaultRuntime: PackageableRuntime[1]
}

class IngestAccessProvider extends AccessPointProvider {
  +ingestMode: String[1]
  +targetStore: Store[1]
}

class DataSpaceDiagram {
  +title: String[1]
  +description: String[0..1]
}

abstract class DataSpaceExecutable {
  +title: String[1]
  +id: String[1]
  +description: String[0..1]
  +accessPointProviderKey: String[0..1]
}

class DataSpacePackageableElementExecutable extends DataSpaceExecutable {
}

class DataSpaceTemplateExecutable extends DataSpaceExecutable {
}

abstract class DataSpaceSupportInfo {
  +documentationUrl: String[0..1]
}

class DataSpaceSupportEmail extends DataSpaceSupportInfo {
  +address: String[1]
}

class DataSpaceSupportCombinedInfo extends DataSpaceSupportInfo {
  +emails: String[*]
  +website: String[0..1]
  +faqUrl: String[0..1]
  +supportUrl: String[0..1]
}

class Mapping
class PackageableRuntime
class Diagram
class FunctionDefinition
class EmbeddedData
class Store

' Inheritance relationships
PackageableElement <|-- DataSpace
AccessPointProvider <|-- MappingAccessProvider
AccessPointProvider <|-- StoreAccessProvider
AccessPointProvider <|-- IngestAccessProvider
DataSpaceExecutable <|-- DataSpacePackageableElementExecutable
DataSpaceExecutable <|-- DataSpaceTemplateExecutable
DataSpaceSupportInfo <|-- DataSpaceSupportEmail
DataSpaceSupportInfo <|-- DataSpaceSupportCombinedInfo

' Associations
DataSpace "1" *-- "1..*" AccessPointProvider : accessPointProviders
DataSpace "1" *-- "1" AccessPointProvider : defaultAccessPointProvider
DataSpace "1" *-- "*" DataSpaceDiagram : diagrams
DataSpace "1" *-- "*" PackageableElement : elements
DataSpace "1" *-- "*" DataSpaceExecutable : executables
DataSpace "1" *-- "0..1" DataSpaceSupportInfo : supportInfo

MappingAccessProvider "1" --> "1" Mapping : mapping
MappingAccessProvider "1" --> "1" PackageableRuntime : defaultRuntime
MappingAccessProvider "1" --> "0..1" EmbeddedData : testData

StoreAccessProvider "1" --> "1" Store : store
StoreAccessProvider "1" --> "1" PackageableRuntime : defaultRuntime

IngestAccessProvider "1" --> "1" Store : targetStore

DataSpaceDiagram "1" --> "1" Diagram : diagram

DataSpacePackageableElementExecutable "1" --> "1" PackageableElement : executable
DataSpaceTemplateExecutable "1" --> "1" FunctionDefinition : query

' Notes
note top of DataSpace
  A DataSpace is a packagable element that encapsulates 
  access point providers, diagrams, and executables, allowing 
  users to organize and interact with their data models.
end note

note right of AccessPointProvider
  Abstract base class for different types of access providers.
  Defines how data can be accessed and transformed within a data space.
end note

note right of MappingAccessProvider
  Provides access to data through a mapping with
  a default runtime for execution and optional test data.
  Replaces the previous DataSpaceExecutionContext.
end note

note right of StoreAccessProvider
  Provides direct access to a store with
  a default runtime for execution.
end note

note right of IngestAccessProvider
  Provides capabilities to ingest data into
  a target store using a specified ingest mode.
end note

note right of DataSpaceDiagram
  Associates a diagram with a data space
  for visual representation of the data model.
end note

note left of DataSpaceExecutable
  Base class for executables in a data space.
  Can be either a packagable element executable
  or a template executable with a query.
end note

note right of DataSpaceSupportInfo
  Abstract base class for support information.
  Can be either an email address or combined
  information with multiple contact methods.
end note

' Layout hints
together {
  class DataSpacePackageableElementExecutable
  class DataSpaceTemplateExecutable
}

together {
  class DataSpaceSupportEmail
  class DataSpaceSupportCombinedInfo
}

together {
  class MappingAccessProvider
  class StoreAccessProvider
  class IngestAccessProvider
}

@enduml
